--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,203 @@
-.App {
+body {
+  font: 14px 'Century Gothic', Futura, sans-serif;
+  margin: 20px;
+  background-color: #d9d9d9;
+}
+
+ol,
+ul {
+  padding-left: 30px;
+}
+
+nav{
+  position: absolute;
+  top:0;
+  left:0;
+}
+a{
+  display: block;
+  margin: 10px;
+}
+
+footer{
+    position: fixed;
+    padding: 15px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #c7d3ec;
+    color: gray;
+    text-align: center;
+}
+
+.heading{
+  text-align: center;
+  font-size: 40px;
+  margin: 60px;
+}
+
+.logo{
+  margin: 30px;
+}
+
+.about{
+  margin: 30px;
+  position: fixed;
+  padding: 15px;
+  right: 0;
+  top: 0;
+}
+
+.center{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.homepage{
+  font-size: 16px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hplink{
+  cursor: pointer;
+  padding: 15px;
+  border: 1px solid black; 
+  border-radius: 10px;
+  width: 200px;
+  text-align: center;
+  background-color:#c7d3ec;
+  display: inline-block;
+}
+.hplink:hover{
+  background-color: #d0ffca ;
+}
+.hpimg{
+  display: inline-block;
+  vertical-align: middle;
+  margin: 2px 12px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.hpitem{
+  display: block;
+  margin: 30px auto;
+  width: 350px;
+  height: 49px;
 }
 
-.App-link {
-  color: #61dafb;
+
+.hplinks{
+  padding: 10px;
+  margin: 10px auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.board-row:after {
+  clear: both;
+  content: '';
+  display: table;
 }
+
+.errorLink:hover{
+  color:rgb(182, 109, 109);
+}
+
+.status {
+  margin-bottom: 10px;
+}
+
+.square {
+  background: rgb(255, 255, 255);
+  border: 1px solid rgb(0, 0, 0);
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 70px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 10px;
+  text-align: center;
+  width: 70px;
+}
+
+.square:focus {
+  outline: none;
+}
+
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
+
+.game-board{
+  margin: auto;
+  width: 207px;
+  padding: 10px;
+}
+
+.board{
+  display: inline-block;
+  border: 1px solid black;
+  border-top: 2px solid black;
+  border-right: 2px solid black;
+  border-radius: 5px;
+  min-width: 207px;
+}
+
+.game {
+  flex-direction: row;
+}
+
+.game-info {
+  margin: auto;
+  width: 207px;
+}
+
+.status{
+  margin: auto;
+}
+
+.winner {
+  font-size: 22px;
+  margin: 10px auto 20px auto;
+  text-align: center;
+}
+
+.icon {
+  margin-left: 8px;
+  padding: 0px;
+  height: 20px;
+  width: 20px;
+}
+
+.moves{
+  list-style-type: none;
+  margin: auto auto 80px auto;
+  padding: 0px;
+}
+
+.movesItem{
+  margin: 5px auto;
+  border: 1px solid black;
+  border-radius: 8px;
+  padding: 7px 1px 8px 12px;
+  background-color: #c7d3ec;
+  cursor: pointer;
+  max-width: 150px;
+}
+.movesItem:hover{
+  background-color: #d0ffca ;
+}
+
+
+.score{
+  width: 207px;
+  margin-top: 23px;
+  border: 2px solid black;
+  border-radius: 8px;
+  padding: 5px;
+  background-color:white ;
+}
+
+.iconScore {
+  margin:6px 0px 0px 0px;
+  height: 20px;
+  width: 20px;
+}
+
